--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@mui/lab": "^5.0.0-alpha.109",
     "@mui/material": "^5.10.13",
     "@mui/styled-engine-sc": "^5.10.6",
+    "@mui/x-date-pickers": "^5.0.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,13 +20,16 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.1.3",
     "chart.js": "^4.0.1",
+    "dayjs": "^1.11.6",
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
+    "recharts": "^2.1.16",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
