--- a/server/config/config.env
+++ b/server/config/config.env
@@ -2,3 +2,4 @@ PORT = 4000
 MONGO_URI = mongodb+srv://admin:bemarideuta1@employee.lubsn6h.mongodb.net/wasteapp
 NODE_ENV = development
 JWT_SECRET = admin123456
+SENDGRID_API_KEY=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
