--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@mui/lab": "^5.0.0-alpha.109",
     "@mui/material": "^5.10.13",
     "@mui/styled-engine-sc": "^5.10.6",
+    "@mui/x-data-grid": "^5.17.14",
     "@mui/x-date-pickers": "^5.0.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -22,6 +23,7 @@
     "chart.js": "^4.0.1",
     "dayjs": "^1.11.6",
     "lottie-react": "^2.3.1",
+    "moment": "2.22.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
