--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
     "target": "es5",
     "lib": [
       "dom",
