--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,11 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.7.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "react-loader-spinner": "^5.3.4",
     "validator": "^13.7.0"
   }
 }
