--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "react-loader-spinner": "^5.3.4",
+    "short-unique-id": "^4.4.4",
     "validator": "^13.7.0"
   }
 }
